# JobRadar

./: .gitignore  README.md  eslint.config.mjs  monitor.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  daily-scan.yml
config/: sources.json
data/: state.json
public/: app.js  core.js  index.html  styles.css
public/data/: jobs.json
scripts/: build.mjs  serve.mjs  validate-workflows.mjs
tests/: test_monitor.py
tests/js/: core.test.mjs
