[project]
name = "job-radar"
version = "1.0.0"
description = "Daily official recruitment board monitor"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "ruff>=0.12,<1",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
